--- a/tutorials/openvpn-instant-app/index.mdx
+++ b/tutorials/openvpn-instant-app/index.mdx
@@ -34,7 +34,7 @@ OpenVPN InstantApp comes with:
 
 2. Click **Create an Instance**. The Instance creation wizard displays.
 
-3. Choose the **NextCloud** image in the **InstantApps** tab:
+3. Choose the **OpenVPN** image in the **InstantApps** tab:
 
 4. Follow the remaining steps to [create your Instance](/compute/instances/how-to/create-an-instance/).
 
